Update package.json for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cashew-price-predictor",
-  "homepage": "https://yourgithubusername.github.io/cashew-price-predictor",
+  "homepage": "https://sri0310-dev.github.io/cashew-price-predictor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
